fix: modal size on mobile

--- a/src/styles/addToAlbum.styl
+++ b/src/styles/addToAlbum.styl
@@ -5,7 +5,9 @@
 
     // Should be in Cozy-uy you know
     .coz-modal-section
+        box-sizing border-box
         width       440px
+        max-width 100%
         border-top 1px solid grey-09
         padding    1em 1.5em .5em !important
 
